--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "framer-motion": "^10.12.16",
     "next": "^13.4.4",
     "react": "^18.2.0",
+    "react": "^16.3.0",
+    "react-typed": "1.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
